Fixed issue that during a copy operation of huge files the preview will get regenerated constantly. Thanks to Simon St. James for the original patch.

BUG: 168666
CCMAIL: kdedevel@etotheipiplusone.com

svn path=/trunk/KDE/kdelibs/; revision=969368